; ModuleID = '/home/carl/AnghaBench/citus/src/backend/distributed/worker/extr_task_tracker.c_TrackerRegisterShutDown.c'
source_filename = "/home/carl/AnghaBench/citus/src/backend/distributed/worker/extr_task_tracker.c_TrackerRegisterShutDown.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32 }
%struct.TYPE_4__ = type { i32, i32 }

@RESERVED_JOB_ID = common dso_local global i32 0, align 4
@SHUTDOWN_MARKER_TASK_ID = common dso_local global i32 0, align 4
@WorkerTasksSharedState = common dso_local global %struct.TYPE_5__* null, align 8
@LW_EXCLUSIVE = common dso_local global i32 0, align 4
@TASK_SUCCEEDED = common dso_local global i32 0, align 4
@INVALID_CONNECTION_ID = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*)* @TrackerRegisterShutDown to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @TrackerRegisterShutDown(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca %struct.TYPE_4__*, align 8
  store i32* %0, i32** %2, align 8
  %6 = load i32, i32* @RESERVED_JOB_ID, align 4
  store i32 %6, i32* %3, align 4
  %7 = load i32, i32* @SHUTDOWN_MARKER_TASK_ID, align 4
  store i32 %7, i32* %4, align 4
  store %struct.TYPE_4__* null, %struct.TYPE_4__** %5, align 8
  %8 = load %struct.TYPE_5__*, %struct.TYPE_5__** @WorkerTasksSharedState, align 8
  %9 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %8, i32 0, i32 0
  %10 = load i32, i32* @LW_EXCLUSIVE, align 4
  %11 = call i32 @LWLockAcquire(i32* %9, i32 %10)
  %12 = load i32, i32* %3, align 4
  %13 = load i32, i32* %4, align 4
  %14 = call %struct.TYPE_4__* @WorkerTasksHashEnter(i32 %12, i32 %13)
  store %struct.TYPE_4__* %14, %struct.TYPE_4__** %5, align 8
  %15 = load i32, i32* @TASK_SUCCEEDED, align 4
  %16 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  %17 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %16, i32 0, i32 1
  store i32 %15, i32* %17, align 4
  %18 = load i32, i32* @INVALID_CONNECTION_ID, align 4
  %19 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  %20 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %19, i32 0, i32 0
  store i32 %18, i32* %20, align 4
  %21 = load %struct.TYPE_5__*, %struct.TYPE_5__** @WorkerTasksSharedState, align 8
  %22 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %21, i32 0, i32 0
  %23 = call i32 @LWLockRelease(i32* %22)
  ret void
}

declare dso_local i32 @LWLockAcquire(i32*, i32) #1

declare dso_local %struct.TYPE_4__* @WorkerTasksHashEnter(i32, i32) #1

declare dso_local i32 @LWLockRelease(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
